# tree-pool

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  Cargo.toml  DEVELOPMENT.md  LICENSE  README.md  release-plz.toml
.github/workflows/: ci.yml  release-plz.yml
demo/: demo.tape  record.sh  setup.sh
docs/plans/: 2026-03-26-branch-selection-and-meta-dir-design.md  2026-03-26-branch-selection-and-meta-dir-implementation.md  2026-03-26-tree-pool-design.md  2026-03-26-tree-pool-implementation.md  2026-03-26-worktree-to-clone-design.md
src/: branch.rs  cli.rs  completions.rs  config.rs  display.rs  git.rs  gitignore.rs  main.rs  pool.rs  process.rs  prompt.rs  shell.rs  state.rs
tests/: integration.rs
