[package]
name = "tree-pool"
version = "0.1.0"
edition = "2024"
description = "A CLI tool for managing pools of reusable git worktrees"
license = "MIT"

[[bin]]
name = "tp"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
colored = "3"
sysinfo = "0.34"
fs2 = "0.4"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
anyhow = "1"
