[package]
name = "tree-pool"
version = "0.1.1"
edition = "2024"
description = "A CLI tool (`tp`) for managing pools of reusable, pre-warmed local git clones for parallel AI coding agent workflows."
license = "MIT"
repository = "https://github.com/freshtonic/tree-pool"

[[bin]]
name = "tp"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = { version = "4", features = ["unstable-dynamic"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
colored = "3"
dialoguer = "0.12"
sysinfo = "0.38"
fs2 = "0.4"
sha2 = "0.11"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
anyhow = "1"
shellexpand = "3"

[dev-dependencies]
tempfile = "3"
